# conanconf

./: README.md
profiles/: clang-18  clang-debug  clang-release  gcc-13  gcc-debug  gcc-release  x86_64-clang-18  x86_64-clang-18-asan  x86_64-clang-18-coverage  x86_64-clang-18-debug  x86_64-clang-18-release  x86_64-clang-18-tsan  x86_64-clang-18-ubsan  x86_64-gcc-14  x86_64-gcc-14-debug  x86_64-gcc-14-release
templates/my_cmake_lib/: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  not_templates
templates/my_cmake_lib/apps/: CMakeLists.txt
templates/my_cmake_lib/docs/: CMakeLists.txt  mainpage.md
templates/my_cmake_lib/example/: CMakeLists.txt  main.cpp
templates/my_cmake_lib/include/{{name}}/: {{name}}.hpp
templates/my_cmake_lib/src/: CMakeLists.txt  {{name}}.cpp
templates/my_cmake_lib/test_package/: CMakeLists.txt  conanfile.py  main.cpp
templates/my_cmake_lib/tests/: CMakeLists.txt  {{name}}Tests.cpp
